fix(undi): из-за изменения отступа под scrollbar не корректно рассчитывалась расположение и ширина заявок на диаграмме

--- a/source/scss/blocks/scrollbar.scss
+++ b/source/scss/blocks/scrollbar.scss
@@ -41,7 +41,7 @@
 }
 
 .undis-content-padding {
-  padding-right: 10px;
+  padding-right: 4px;
 }
 
 .scroll-cont-undispatche {
